# c4

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  basic.txt  design.txt  grammer.txt  graph.txt  ir.txt  main.c  output.s  output.ssa  todo.md  todo.txt
doc/devel/: compile_architecture.md
doc/devel/abi/: SystemVAbi.md  test.c  test.s
src/: allocator.c  arena.c  arena.cpp  asm.c  ast.c  ast.cpp  buffer.c  debug.c  file.c  fmt.c  gen.cpp  ir.c  ir.cpp  lexer.c  lexer.cpp  main.cpp  nlexer.c  sema.c  sema.cpp  str.c  writer.c
src/include/: allocator.h  arena.h  arena.hpp  arena_chunk_list.hpp  asm.h  assert.h  ast.h  ast.hpp  buffer.h  checked_math.h  common.h  debug.h  debug.hpp  file.h  fmt.h  gen.hpp  ints.h  ir.h  ir.hpp  lexer.h  lexer.hpp  list_macros.h  macros.h  nlexer.h  numbers.hpp  sema.h  sema.hpp  small_vector.hpp  str.h  token_parser.hpp  tokens.h  try.hpp  uninitialized.hpp  utility.h  utils.hpp  writer.h
src/include/generic/: darray.h
test/: design.txt  mut.c3  recur.c4
test/fail/: addr.c4  closure.c4  const_resolution.c4  fn_alias.c4  mismatch.c4  mixed_const_mut.c4  mut.c4
test/ok/: addr.c3  const_fn.c4  const_resolution.c4  fn_alias.c4  int.c4  locals.c4  long_identifiers.c4  nested_fns.c4  nonaliasing_alias.c4  ptrs.c4  void_implicit_cast.c4
