cmake_minimum_required(VERSION 3.10)
project(c4)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED TRUE)
add_executable(c4 main.c src/debug.c src/lexer.c src/str.c src/arena.c src/ast.c src/sema.c)

if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
	target_compile_options(c4 PRIVATE -D_GLIBCXX_DEBUG)
endif()

if (CMAKE_C_COMPILER_ID MATCHES "Clang|GNU")
	target_compile_options(c4 PRIVATE -Wall -Wextra -Wpedantic -Wimplicit-fallthrough -Wconversion -fsanitize=address)
	target_link_options(c4 PRIVATE -fsanitize=address)
elseif (CMAKE_C_COMPILER_ID STREQUAL "MSVC")
    target_compile_options(c4 PRIVATE /W4 /permissive-)
endif()
